--- a/frontend/src/components/Dashboards/SysAdminDashboard/DashboardPage/AdminDashboard.css
+++ b/frontend/src/components/Dashboards/SysAdminDashboard/DashboardPage/AdminDashboard.css
@@ -21,6 +21,7 @@
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 20px;
     margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .admin-dashboard .card {
@@ -52,6 +53,35 @@
     color: #666;
     text-transform: uppercase;
     letter-spacing: 0.5px;
+}
+
+.admin-dashboard .btn-quick-action {
+  display: flex;
+  gap: 6px;
+  background-color: #2b6e3f;; /* button green */
+  color: white; 
+  border: none;
+  border-radius: 8px;
+  padding: 6px 14px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background 0.3s ease;
+}
+
+.admin-dashboard .btn-quick-action.btn-red {
+    background-color: #c53030; /* red button */
+}
+
+.admin-dashboard .btn-quick-action.btn-red:hover {
+    background-color: #9b2c2c;
+}
+
+.admin-dashboard .btn-quick-action.btn-green:hover {
+    background-color: #225e33;
+}
+
+.admin-dashboard .btn-quick-action.btn-lightgreen {
+    background-color: #38a169; /* light green button */
 }
 
 /* Overlay */
